# livekit-demo

./: .env.example  .gitignore  Makefile  Procfile  README.md  docker-compose.yml  render.yaml
fish/: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  livekit.toml  pyproject.toml
fish/scripts/: gen_voice_samples.py  llm_latency.py  probe_tag_fidelity.py  prompt_test.py
fish/src/: agent.py  llm.py  voice_clone.py
web/: .dockerignore  .env.example  Dockerfile  README.md  app-config.ts  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml
web/app/: layout.tsx  opengraph-image.tsx
web/app/api/token/: route.ts
web/app/chat-to-clone/: page.tsx
web/app/cloning/: page.tsx
web/app/jp/: page.tsx
web/components/agents-ui/: agent-chat-transcript.tsx  agent-control-bar.tsx
web/components/agents-ui/blocks/agent-session-view-01/components/: agent-session-block.tsx
web/components/app/: app-header.tsx  app.tsx  capture-progress.tsx  chat-clone-status.tsx  clone-script-card.tsx  clone-status-banner.tsx  debug-panel.tsx  design-status-card.tsx  error-boundary.tsx  fish-audio-logo.tsx  fish-cta.tsx  mode-toggle.tsx  mood-indicator.tsx  view-controller.tsx  voice-picker.tsx  welcome-view.tsx
web/hooks/: useAgentErrors.tsx  useDebug.ts
web/lib/: debug-store.ts  i18n.tsx  token-source.ts
