[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fish-voice-clone-agent"
version = "1.0.0"
description = "LiveKit Agents worker for the Fish Audio voice-cloning demo"
requires-python = ">=3.10, <3.15"

dependencies = [
    "livekit-agents[assemblyai,openai,silero]>=1.6.0",
    "livekit-plugins-fishaudio>=1.6.0",
    "livekit-plugins-google>=1.6.0",
    "python-dotenv",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.uv]
# yarl 1.24.1 was published with only a cp310 wheel and no sdist, so it can't
# install on Python 3.11+. Remove this once upstream uploads the remaining wheels.
constraint-dependencies = ["yarl<1.24"]

# Expressive mode (LLM-driven prosody markup) isn't in a livekit-agents release yet —
# it lives on Cale's fork. Pull both the core SDK and the Fish Audio plugin from the
# `cale/expressive-fish` branch (the Fish provider wiring spans both packages).
# Track upstream progress at livekit/agents PR #6116 (tina/expressive-mode).
[tool.uv.sources]
livekit-agents = { git = "https://github.com/cshape/agents-expressive.git", branch = "cale/expressive-fish", subdirectory = "livekit-agents" }
livekit-plugins-fishaudio = { git = "https://github.com/cshape/agents-expressive.git", branch = "cale/expressive-fish", subdirectory = "livekit-plugins/livekit-plugins-fishaudio" }
livekit-plugins-google = { git = "https://github.com/cshape/agents-expressive.git", branch = "cale/expressive-fish", subdirectory = "livekit-plugins/livekit-plugins-google" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "A", "C4", "UP", "SIM", "RUF"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
